# vulnera-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md
.githooks/: pre-commit
.github/scripts/: distribute.sh
.github/workflows/: release.yml
docs/: README.md  commands.md  development.md  quick-start.md
src/: api_client.rs  constants.rs  context.rs  credentials.rs  executor.rs  file_cache.rs  fix_generator.rs  lib.rs  main.rs  manifest_cache.rs  output.rs  quota_tracker.rs  severity.rs  watcher.rs
src/application/: exit_policy.rs  mod.rs
src/application/services/: mod.rs  scan_targets.rs  watch_runner.rs
src/application/use_cases/: analyze.rs  api.rs  auth.rs  deps.rs  generate_fix.rs  mod.rs  quota.rs  sast.rs  sast_fix.rs  secrets.rs
src/commands/: analyze.rs  api.rs  auth.rs  config.rs  deps.rs  generate_fix.rs  mod.rs  quota.rs  sast.rs  secrets.rs
tests/: cli_tests.rs
